# gi_string

./: .gitignore  CMakeLists.txt  GiString.sln  GiString.vcxproj  LICENSE  README.en.md  README.md  gi_string.sln  gi_string.vcxproj
include/gikoo/: gi_string.cpp  gi_string.h
src/: gi_string.cpp
test/: gistring_test.cpp
unit_test/: test.cpp  unit_test.vcxproj
