CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
PROJECT(gistring VERSION 0.5.0)

# GoogleTest requires at least C++14
set(CMAKE_CXX_STANDARD 14)


INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/3rd-party)
FILE(GLOB SRC_HEADER_LIST ${CMAKE_SOURCE_DIR}/include/*.h ${CMAKE_SOURCE_DIR}/include/*.hpp)
FILE(GLOB SRC_SOURCE_LIST ${CMAKE_SOURCE_DIR}/src/*.c ${CMAKE_SOURCE_DIR}/src/*.cc ${CMAKE_SOURCE_DIR}/src/*.cpp ${CMAKE_SOURCE_DIR}/src/*.cxx)
SET(SRC_LIST ${SRC_HEADER_LIST} ${SRC_SOURCE_LIST})

ADD_LIBRARY( gistring ${SRC_LIST})