CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

SET(MODULE_NAME "gistring")

set(CMAKE_BUILD_TEST "")

IF (NOT DEFINED CMAKE_BUILD_TEST)
    PROJECT ("${MODULE_NAME}")
ELSE()
    PROJECT ("${MODULE_NAME}_test")
ENDIF()

# GoogleTest requires at least C++14
set(CMAKE_CXX_STANDARD 14)

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/include
    ${CMAKE_SOURCE_DIR}/3rd-party
    )

FILE(GLOB_RECURSE SRC_HEADER_LIST ${CMAKE_SOURCE_DIR}/include/*.h)

IF (NOT DEFINED CMAKE_BUILD_TEST)
    FILE(GLOB_RECURSE SRC_SOURCE_LIST ${CMAKE_SOURCE_DIR}/src/*.c ${CMAKE_SOURCE_DIR}/src/*.cpp)
    SET(SRC_LIST ${SRC_HEADER_LIST} ${SRC_SOURCE_LIST})
    ADD_LIBRARY( gistring STATIC ${SRC_LIST})
ELSE()
    FILE(GLOB_RECURSE SRC_SOURCE_LIST ${CMAKE_SOURCE_DIR}/src/*.c ${CMAKE_SOURCE_DIR}/src/*.cpp ${CMAKE_SOURCE_DIR}/test/*.cpp)
    SET(SRC_LIST ${SRC_HEADER_LIST} ${SRC_SOURCE_LIST})
    add_executable( gistring_test ${SRC_LIST})
ENDIF()
